--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flatacuties</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div class="logo">
-      <h1 id="title">FLATACUTIES</h1>
+      <h1 id="heading">FLATACUTIES</h1>
     </div>
 
     <div id="data">
@@ -20,7 +20,7 @@
         <p id="name"></p>
         <img
           id="image"
-          alt="photo of the creature">
+          alt="photo of the animal">
         <h4>Total Votes: <span id="vote-count"></span></h4>
         <form id="votes-form">
           <input type="text" placeholder="Enter Votes" id="votes" name="votes" />
